Fixed spacing on landing page

--- a/src/views/Home/home.scss
+++ b/src/views/Home/home.scss
@@ -63,12 +63,12 @@ body {
 }
 
 p.regTxt {
-  margin-top: .6em;
+  margin-top: .1em;
   font-size: .6em !important;
 }
 
 span#my_name {
-  font-size: 1.3em;
+  font-size: 1.2em;
 }
 
 div.description {
